RESOLVED FIXED118885
String::lower() - Skip to slow path on the first failure
https://bugs.webkit.org/show_bug.cgi?id=118885
Summary String::lower() - Skip to slow path on the first failure
Benjamin Poulain
Reported 2013-07-18 20:56:03 PDT
String::lower() - Skip to slow patch on the first failure
Attachments
Patch (3.07 KB, patch)
2013-07-18 20:58 PDT, Benjamin Poulain
kling: review+
Benjamin Poulain
Comment 1 2013-07-18 20:58:18 PDT
Benjamin Poulain
Comment 2 2013-07-22 15:01:21 PDT
Comment on attachment 207055 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=207055&action=review > Source/WTF/ChangeLog:3 > + String::lower() - Skip to slow patch on the first failure Note to self: fix the changlog!
Benjamin Poulain
Comment 3 2013-07-22 15:29:29 PDT
Darin Adler
Comment 4 2013-08-09 13:55:49 PDT
Did this slow down the “already all lowercase” case? How did you measure that?
Benjamin Poulain
Comment 5 2013-08-09 15:07:59 PDT
(In reply to comment #4) > Did this slow down the “already all lowercase” case? I could not measure any difference for the fast path on x86_64 and ARM. > How did you measure that? Through the JS API with String.toLowerCase() with an ad-hoc benchmark.
Note You need to log in before you can comment on or make changes to this bug.